# rss-reader

./: Cargo.toml  Dockerfile  docker-compose-test.yml  docker-compose.yml
postgres/: init.sql
src/: bd.rs  hash.rs  main.rs  user.rs
src/application/user/: user_service.rs
src/domain/user/: mod.rs
src/domain/user/commands/: create_user.rs
src/domain/user/entities/: auth.rs  user.rs
src/domain/user/ports/: database_port.rs  driving_port.rs  mod.rs
src/infrastructure/: bd.rs  mod.rs
src/infrastructure/repositories/: user_repository.rs
src/user/: user_repository.rs
src/user_interface/: mod.rs
src/user_interface/user/: mod.rs
src/user_interface/user/handlers/: create_user.rs
