[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
    uuid = { version = "0.8.2", features = ["v4"] }
    postgres = { version = "0.19.8" }
    argon2 = { version = "0.5.3"}
    axum = { version = "0.7.5" }
    serde = { version = "1.0.204", features = ["derive"]}
    serde_json = "1.0.121"
    tokio = { version = "1.10.0", features = ["full"]}
    axum-macros = "0.4.1"
